fix permgensize for tests